--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,26 +12,27 @@
         android:id="@+id/txt_expressao"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="40sp"
-        android:gravity="end"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="0"
+        android:background="@color/black"
         android:ellipsize="start"
+        android:gravity="end"
         android:singleLine="true"
-        />
+        android:text=""
+        android:textColor="@color/white"
+        android:textSize="40sp" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txt_resultado"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        android:gravity="end"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="0"
+        android:background="@color/black"
         android:ellipsize="end"
+        android:gravity="end"
         android:maxLines="1"
-        />
+        android:text=""
+        android:textColor="@color/white"
+        android:textSize="30sp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
